--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -22,6 +22,11 @@
             <version>6.1.25</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.20</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
