--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -49,9 +49,9 @@
             <version>9.3.0.M0</version>
         </dependency>
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.20</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
     </dependencies>
